# finnish-open-agent

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
docs/: .thumbnail  TOOLS.md  ds-base.js  index.html
docs/_ds/modernist-6e12d603-5478-4456-8158-89b377a660ed/: _ds_manifest.json
ecosystem/: CATALOG.md  registry.yaml
examples/: claude_desktop_config.json
scripts/: render_catalog.py  render_community_table.py  render_tools.py
skills/: README.md
skills/finnish-civic/: SKILL.md
skills/finnish-culture/: SKILL.md
skills/finnish-energy/: SKILL.md
skills/finnish-events/: SKILL.md
skills/finnish-health/: SKILL.md
skills/finnish-library/: SKILL.md
skills/finnish-open-data/: SKILL.md
skills/finnish-places/: SKILL.md
skills/finnish-registers/: SKILL.md
skills/finnish-transport/: SKILL.md
skills/finnish-weather/: SKILL.md
src/finnish_open_agent/: __init__.py  _http.py  app.py  cli.py  config.py  server.py
src/finnish_open_agent/tools/: __init__.py  civic.py  common.py  culture.py  energy.py  events.py  health.py  library.py  places.py  registers.py  transport.py  weather.py
tests/: test_cli.py  test_docs.py  test_live.py  test_parsing.py  test_registry.py
