[project]
name = "finnish-open-agent"
version = "0.3.0"
description = "Agentic toolkit for Finnish open data & public-service APIs: an MCP server plus CLI-oriented skills."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mika Hänninen" }]
keywords = ["mcp", "finland", "open-data", "digitraffic", "fmi", "prh", "avoindata"]

dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "pyyaml>=6.0",
]

[project.scripts]
finnish-open-agent = "finnish_open_agent.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finnish_open_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: hits real Finnish open-data APIs over the network (deselect with -m 'not live')",
]

[tool.ruff]
line-length = 100
target-version = "py311"
